# syrin-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  openmemory.md  pre-commit.sh  publish.sh  pyproject.toml  pyrightconfig.json  test_openrouter.py
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  DYNAMIC_PIPELINE.md  README.md  TYPING.md  advanced-topics.md  agent-with-memory.md  audit.md  budget-control.md  checkpoint.md  circuit-breaker.md  context.md  dependency-injection.md  dynamic-pipeline.md  event-bus.md  extension-points.md  faq.md  getting-started.md  guardrails.md  hitl.md  mcp.md  memory.md  models.md  multi-agent.md  observability.md  prompts.md  ratelimit.md  reference.md  remote-config.md  research-agent-with-tools.md  serving.md  simple-qa-agent.md  streaming.md  structured-output.md
docs/agent/: checkpointing.md  constructor.md  creating-agents.md  memory.md  model.md  overview.md  response.md  running.md  tools.md
docs/guides/: context-types.md  decision-guide.md
examples/: README.md  debug_example.py  debugger_example.py  getting_started.ipynb  main.py  master_dynamic_pipeline.py  simple_events.py  structured_output.py
examples/01_minimal/: agent_with_budget.py  agent_with_tools.py  basic_agent.py  quick_run.py  response_object.py
examples/02_tasks/: multiple_tasks.py  single_task.py  task_with_output_type.py
examples/03_budget/: basic_budget.py  budget_persistence.py  rate_limits.py  shared_budget.py  thresholds.py  token_limits.py
examples/04_memory/: basic_memory.py  consolidate.py  memory_types_and_decay.py  recall.py
examples/05_tools/: structured_output.py  toon_format.py
examples/06_loops/: all_loop_strategies.py
examples/07_multi_agent/: dynamic_pipeline_5agents.py  dynamic_pipeline_basic.py  dynamic_pipeline_full.py  handoff.py  handoff_intercept.py  pipeline.py  spawn.py  team.py
examples/08_streaming/: async_agents.py  stream_async.py  stream_sync.py
examples/09_guardrails/: authority_layer.py  guardrail_reports.py  input_output_guardrails.py  intelligence_layer.py  pii_and_evaluation.py
examples/10_observability/: audit_logging.py  comprehensive_tracing.py  events_and_hooks.py  hooks.py  reports.py  tracing.py
examples/11_context/: context_config_demo.py  context_context_mode_demo.py  context_custom_compaction_prompt_demo.py  context_formation_mode_pull_demo.py  context_management.py  context_map_demo.py  context_output_chunks_demo.py  context_proactive_compaction_demo.py  context_runtime_injection_demo.py  context_snapshot_demo.py  context_thresholds_compaction_demo.py
examples/11_mcp/: README.md  mcp_client.py  mcp_colocation.py  mcp_select.py  mcp_server_class.py
examples/12_checkpoints/: basic_checkpoint.py  long_running_agent.py
examples/12_remote_config/: init_and_serve.py
examples/13_models/: all_providers.py  custom_model.py
examples/14_prompts/: dynamic_prompt.py  persona_prompt.py  prompt_decorator.py
examples/15_advanced/: agent_inheritance.py  circuit_breaker.py  config.py  dependency_injection.py  hitl_approval.py  pipe_operator.py
examples/16_serving/: README.md  STRESS_TEST_REMOTE_CONFIG.md  chatbot.py  cli_serve.py  discovery_override.py  http_serve.py  mount_on_existing_app.py  multi_agent_router.py  playground_checkpoints.py  playground_dynamic_pipeline.py  playground_guardrails.py  playground_multi_agent.py  playground_serve.py  playground_single.py  stdio_serve.py  stress_test_remote_config.py  test_tool_toggle.py
examples/advanced/: __init__.py  async_agent.py  checkpoint.py  cli_example.py  config.py  context.py  guardrails.py  hooks.py  inheritance.py  memory.py  observability.py  observability_comprehensive.py  pipe_operator.py  ratelimit.py  sandbox.py  streaming.py
examples/checkpoint/: auto_checkpoint.py  basic.py
examples/core/: __init__.py  agent_with_budget.py  basic_agent.py  loops.py  prompt_decorator.py  quick_run.py  response_object.py  structured_output.py  tools_and_tasks.py  toon_format.py
examples/guardrails/: README.md  __init__.py  authority.py  complete_workflows.py  foundation.py  intelligence.py  reports.py
examples/memory/: __init__.py  basic_memory.py  memory_advanced.py
examples/models/: __init__.py  custom_models.py  models.py  quickstart.py
examples/multi_agent/: __init__.py  handoff.py  pipeline.py  team.py
examples/reports/: complete_reports.py
playground/app/: globals.css  page.tsx
playground/components/: AgentConfigModal.tsx  ConfigFieldRow.tsx  ConfigSectionBlock.tsx
playground/lib/: api.ts
src/syrin/: __init__.py  __main__.py  _sentinel.py  cli.py  config.py  domain_events.py  enums.py  events.py  hooks.py  loop.py  output.py  run_context.py  threshold.py  validation.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py
tests/agent/: test_agent.py  test_multi_agent.py
tests/budget/: test_budget.py
tests/budget_store/: test_budget_store.py
tests/checkpoint/: test_agent_checkpoint.py  test_checkpoint.py
tests/cli/: test_cli.py
tests/code_quality/: __init__.py  test_critical_path_edge_cases.py  test_public_api_exports.py  test_run_and_config_api.py
tests/context/: test_context.py
tests/core_stability/: __init__.py  test_agent_lifecycle.py  test_budget_enforcement.py  test_loop_strategies_stability.py  test_memory_stability.py  test_model_resolution.py  test_response_contract.py  test_structured_output.py
tests/cost/: test_cost.py
tests/e2e/: README.md  test_e2e_edge_cases.py  test_e2e_full_workflow.py  test_e2e_multi_agent.py
tests/exceptions/: test_exceptions.py
tests/guardrails/: test_authority_layer.py  test_guardrail_report.py  test_guardrails.py  test_integration_reports.py  test_intelligence_layer.py
tests/hooks/: test_hooks.py
tests/inheritance/: test_inheritance.py
tests/integration/: test_agent_integration.py  test_checkpoint_triggers.py  test_circuit_breaker_agent.py  test_edge_cases.py  test_loop_strategies_stability.py  test_memory_stability.py  test_rate_limit_actions.py
tests/loop/: test_loop.py  test_loop_strategies.py
tests/memory/: test_4type_memory.py  (+3 more)
(+164 files in other folders)
