[project]
name = "syrin"
version = "0.2.0"
description = "Python library for building AI agents with budget management, declarative definitions, and production-ready observability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Syrin Labs" }]
keywords = ["ai", "agents", "llm", "budget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0", "httpx", "tiktoken", "python-dotenv>=1.2.1"]

[project.urls]
Homepage = "https://syrin.ai/"
"GitHub" = "https://github.com/syrin-labs/syrin-python"
"Documentation" = "https://syrin.ai/docs"
"PyPI" = "https://pypi.org/project/syrin/"

[project.optional-dependencies]
litellm = ["litellm"]
anthropic = ["anthropic"]
openai = ["openai"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "python-dotenv",
]

[project.scripts]
syrin = "syrin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syrin"]

[tool.hatch.build.targets.sdist]
packages = ["src/syrin"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
# E501: line length (handled by formatter); E402: module level import after code;
# ARG002: self/cls in methods; ARG001: unused function args (e.g. pytest fixtures);
# F821: undefined name (dynamic); F811: reimport (conditional provider imports).
ignore = [
    "E501",
    "E402",
    "ARG002",
    "ARG001",
    "F821",
    "F811",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "syrin.providers.anthropic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syrin.providers.openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "syrin.providers.litellm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "phoenix.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langfuse"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qdrant_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qdrant_client.models"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.config"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psycopg2"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/syrin"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
